# spam_badwords

./: Cargo.toml  pyproject.toml
src/: lib.rs
