[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"
license = "GPL-2.0-only"

[project]
name = "spam_badwords"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
